# jupyterlab-python-file

./: .gitignore  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  install.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml
binder/: environment.yml  postBuild
jupyterlab-python-file/: __init__.py
jupyterlab_python_file/: __init__.py
src/: index.ts
